tests/macro-tests/cases/property/invalid_function_qualifiers.stderr
error: property functions cannot be `async`
 --> cases/property/invalid_function_qualifiers.rs:5:5
  |
5 | pub async fn invalid_async(child: impl IntoUiNode, _input: impl IntoVar<u32>) -> UiNode {
  |     ^^^^^

error: property functions cannot be `unsafe`
  --> cases/property/invalid_function_qualifiers.rs:10:5
   |
10 | pub unsafe fn invalid_unsafe(child: impl IntoUiNode, _input: impl IntoVar<u32>) -> UiNode {
   |     ^^^^^^

error: property functions cannot be `extern`
  --> cases/property/invalid_function_qualifiers.rs:15:5
   |
15 | pub extern "C" fn invalid_extern(child: impl IntoUiNode, _input: impl IntoVar<u32>) -> UiNode {
   |     ^^^^^^
